--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,14 +13,14 @@
 }
 
 .title a {
-  color: #f213a4;
+  color: #d66f01;
   text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .title {
@@ -35,6 +35,9 @@
 }
 
 .connect {
+  position: fixed;
+  top: 1%;
+  right: 1%;
   margin-bottom: 2rem;
   width: 230px;
 }
@@ -60,28 +63,33 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 1200px;
+  max-width: 100vw;
 }
 
 .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #1b2129;
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 3px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
+  box-shadow: 0px 0px 15px 0px #ececec;
+  max-width: 210px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
   background-color: #272c34;
-  color: #0ea5e9;
-  border-color: #0ea5e9;
+  color: #e99b00;
+  border-color: #e9910e;
+  box-shadow: 0px 0px 15px 9px #ececec;
 }
 
 .card h2 {
